--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=LaTiraWebsite
 
 
 sonar.sources=./src
-sonar.test.inclusions=src/**/*.test.ts
-sonar.coverage.exclusions=src/**/*.test.ts
+sonar.test.inclusions=src/**/*.test.ts,
+sonar.coverage.exclusions=src/**/*.test.ts, src/**/*.test.tsx, src/main.tsx
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.scm.provider=git
