--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "test-coverage": "jest --watchAll --coverage"
   },
   "dependencies": {
+    "@types/i18n": "^0.13.2",
     "dotenv": "^16.0.1",
+    "i18next": "^21.8.2",
+    "i18next-browser-languagedetector": "^6.1.4",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-i18next": "^11.16.9"
   },
   "devDependencies": {
     "@babel/core": "^7.17.12",
