--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "test-coverage": "jest --watchAll --coverage"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.1",
     "@types/i18n": "^0.13.2",
     "dotenv": "^16.0.1",
+    "framer-motion": "^6.3.3",
     "i18next": "^21.8.2",
     "i18next-browser-languagedetector": "^6.1.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-i18next": "^11.16.9"
+    "react-i18next": "^11.16.9",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.12",
