--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc && vite build",
     "test": "jest",
     "preview": "vite preview",
-    "test-coverage": "jest --watchAll --coverage"
+    "test-coverage": "jest --watchAll --coverage",
+    "test-watch": "jest --watchAll --watch"
   },
   "dependencies": {
     "@headlessui/react": "^1.6.1",
@@ -28,6 +29,7 @@
     "@babel/preset-typescript": "^7.17.12",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
+    "@testing-library/user-event": "^14.2.0",
     "@types/jest": "^27.5.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
