--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,6 @@ sonar.projectKey=LaTiraWebsite
 
 sonar.sources=./src
 sonar.test.inclusions=src/**/*.test.ts,
-sonar.coverage.exclusions=src/**/*.test.ts, src/**/*.test.tsx, src/main.tsx
+sonar.coverage.exclusions=src/**/*.test.ts, src/**/*.test.tsx, src/main.tsx, src/utils/i18n.ts
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 sonar.scm.provider=git
