--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.1",
+    "@reduxjs/toolkit": "^1.8.1",
     "@types/i18n": "^0.13.2",
     "dotenv": "^16.0.1",
     "framer-motion": "^6.3.3",
+    "graphql-request": "^4.2.0",
     "i18next": "^21.8.2",
     "i18next-browser-languagedetector": "^6.1.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.16.9",
     "react-icons": "^4.3.1",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
@@ -33,6 +36,7 @@
     "@types/jest": "^27.5.1",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/react-redux": "^7.1.24",
     "@typescript-eslint/eslint-plugin": "^5.24.0",
     "@typescript-eslint/parser": "^5.24.0",
     "@vitejs/plugin-react": "^1.3.0",
