--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "i18next": "^21.8.2",
     "i18next-browser-languagedetector": "^6.1.4",
     "react": "^18.0.0",
+    "react-alice-carousel": "^2.6.1",
     "react-dom": "^18.0.0",
     "react-i18next": "^11.16.9",
     "react-icons": "^4.3.1",
