--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.1",
     "@reduxjs/toolkit": "^1.8.1",
+    "@tailwindcss/line-clamp": "^0.4.0",
     "@types/i18n": "^0.13.2",
     "dotenv": "^16.0.1",
     "framer-motion": "^6.3.3",
