--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "@headlessui/react": "^1.6.1",
+    "@react-google-maps/api": "^2.12.0",
     "@reduxjs/toolkit": "^1.8.1",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@types/i18n": "^0.13.2",
